update 优化 屏蔽 powerjob 无用的心跳日志

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -141,6 +141,7 @@ logging:
     org.springframework: warn
     org.apache.dubbo: warn
     com.alibaba.nacos: warn
+    tech.powerjob.worker.background: warn
   config: classpath:logback-plus.xml
 
 # Sa-Token配置
