🎈发布 2.1.0 客户端授权、三方授权、传输加密、sms4j、powerjob密集来袭

--- a/ruoyi-api/ruoyi-api-bom/pom.xml
+++ b/ruoyi-api/ruoyi-api-bom/pom.xml
@@ -15,7 +15,7 @@
     </description>
 
     <properties>
-        <revision>2.1.0-SNAPSHOT</revision>
+        <revision>2.1.0</revision>
     </properties>
 
     <dependencyManagement>
