--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
-        <spring-boot.version>3.1.3</spring-boot.version>
+        <spring-boot.version>3.1.4</spring-boot.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <spring-boot-admin.version>3.1.5</spring-boot-admin.version>
+        <spring-boot-admin.version>3.1.6</spring-boot-admin.version>
         <spring-boot.mybatis>3.0.2</spring-boot.mybatis>
         <mybatis.version>3.5.13</mybatis.version>
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
@@ -31,12 +31,12 @@
         <therapi-javadoc.version>0.15.0</therapi-javadoc.version>
         <poi.version>5.2.3</poi.version>
         <easyexcel.version>3.3.2</easyexcel.version>
-        <hutool.version>5.8.20</hutool.version>
+        <hutool.version>5.8.22</hutool.version>
         <redisson.version>3.23.4</redisson.version>
         <lock4j.version>2.2.5</lock4j.version>
         <powerjob.version>4.3.3</powerjob.version>
-        <satoken.version>1.35.0.RC</satoken.version>
-        <lombok.version>1.18.28</lombok.version>
+        <satoken.version>1.36.0</satoken.version>
+        <lombok.version>1.18.30</lombok.version>
         <logstash.version>7.4</logstash.version>
         <easy-es.version>1.1.1</easy-es.version>
         <elasticsearch.version>7.14.0</elasticsearch.version>
