--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.7.15</spring-boot.version>
+        <spring-boot.version>2.7.16</spring-boot.version>
         <spring-cloud.version>2021.0.8</spring-cloud.version>
-        <spring-boot-admin.version>2.7.10</spring-boot-admin.version>
+        <spring-boot-admin.version>2.7.11</spring-boot-admin.version>
         <spring-boot.mybatis>2.2.2</spring-boot.mybatis>
         <mybatis.version>3.5.13</mybatis.version>
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
@@ -34,8 +34,8 @@
         <redisson.version>3.20.1</redisson.version>
         <lock4j.version>2.2.3</lock4j.version>
         <xxl-job.version>2.4.0</xxl-job.version>
-        <satoken.version>1.35.0.RC</satoken.version>
-        <lombok.version>1.18.26</lombok.version>
+        <satoken.version>1.36.0</satoken.version>
+        <lombok.version>1.18.30</lombok.version>
         <logstash.version>7.2</logstash.version>
         <easy-es.version>1.1.1</easy-es.version>
         <elasticsearch.version>7.14.0</elasticsearch.version>
