update 优化 排除powerjob无用的依赖 减少打包30M体积

--- a/ruoyi-common/ruoyi-common-job/pom.xml
+++ b/ruoyi-common/ruoyi-common-job/pom.xml
@@ -32,6 +32,12 @@
         <dependency>
             <groupId>tech.powerjob</groupId>
             <artifactId>powerjob-worker</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>powerjob-remote-impl-akka</artifactId>
+                    <groupId>tech.powerjob</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>tech.powerjob</groupId>
