update 优化 websocket 模块减少日志输出 增加登录推送

--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -89,6 +89,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.dromara</groupId>
+            <artifactId>ruoyi-api-resource</artifactId>
+        </dependency>
 
         <!-- 自定义负载均衡(多团队开发使用) -->
 <!--        <dependency>-->
