--- a/config/nacos/ruoyi-resource.yml
+++ b/config/nacos/ruoyi-resource.yml
@@ -27,6 +27,7 @@ spring:
 #          password: ${datasource.system-postgres.password}
 
 websocket:
+  # 如果关闭 需要和前端开关一起关闭
   enabled: true
   # 路径
   path: /websocket
