update 优化 jvm参数调整 全面启用zgc

--- a/ruoyi-modules/ruoyi-system/Dockerfile
+++ b/ruoyi-modules/ruoyi-system/Dockerfile
@@ -20,4 +20,5 @@ ENTRYPOINT ["java", \
             "-Dserver.port=${SERVER_PORT}", \
 #            "-Dskywalking.agent.service_name=ruoyi-system", \
 #            "-javaagent:/ruoyi/skywalking/agent/skywalking-agent.jar", \
-            "-jar", "app.jar"]
+            "-jar", "app.jar",
+            "-XX:+HeapDumpOnOutOfMemoryError", "-Xlog:gc*,:time,tags,level", "-XX:+UseZGC"]
