--- a/ruoyi-visual/ruoyi-nacos/Dockerfile
+++ b/ruoyi-visual/ruoyi-nacos/Dockerfile
@@ -9,9 +9,10 @@ WORKDIR /ruoyi/nacos
 
 EXPOSE 8848
 
-ENV TZ=Asia/Shanghai LANG=C.UTF-8 LC_ALL=C.UTF-8 JAVA_OPTS="-Xms256m -Xmx512m"
+ENV TZ=Asia/Shanghai LANG=C.UTF-8 LC_ALL=C.UTF-8
 
 ADD ./target/ruoyi-nacos.jar ./app.jar
 
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar", "${JAVA_OPTS}"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar",
+            "-Xms512m", "-Xmx1024m", "-XX:+HeapDumpOnOutOfMemoryError", "-Xlog:gc*,:time,tags,level", "-XX:+UseZGC"]
 
