--- a/ruoyi-modules/ruoyi-gen/Dockerfile
+++ b/ruoyi-modules/ruoyi-gen/Dockerfile
@@ -7,10 +7,10 @@ RUN mkdir -p /ruoyi/gen/logs
 
 WORKDIR /ruoyi/gen
 
-ENV SERVER_PORT=9202 LANG=C.UTF-8 LC_ALL=C.UTF-8
+ENV SERVER_PORT=9202 LANG=C.UTF-8 LC_ALL=C.UTF-8 JAVA_OPTS=""
 
 EXPOSE ${SERVER_PORT}
 
 ADD ./target/ruoyi-gen.jar ./app.jar
 
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-Dserver.port=${SERVER_PORT}", "-jar", "app.jar"]
+ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} -jar app.jar ${JAVA_OPTS}
