--- a/ruoyi-example/ruoyi-stream-mq/pom.xml
+++ b/ruoyi-example/ruoyi-stream-mq/pom.xml
@@ -64,6 +64,17 @@
             <artifactId>ruoyi-common-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.dromara</groupId>
+            <artifactId>ruoyi-common-tenant</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.dromara</groupId>
+                    <artifactId>ruoyi-common-mybatis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
     <build>
