--- a/ruoyi-visual/ruoyi-sentinel-dashboard/Dockerfile
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/Dockerfile
@@ -17,5 +17,4 @@ ADD ./target/ruoyi-sentinel-dashboard.jar ./app.jar
 ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} \
            #-Dskywalking.agent.service_name=ruoyi-sentinel-dashboard \
            #-javaagent:/ruoyi/skywalking/agent/skywalking-agent.jar \
-           -jar app.jar \
-           -XX:+HeapDumpOnOutOfMemoryError -Xlog:gc*,:time,tags,level -XX:+UseZGC ${JAVA_OPTS}
+           -jar app.jar ${JAVA_OPTS}
