fix 修复 sentinel 镜像添加了多余接口参数

--- a/ruoyi-visual/ruoyi-sentinel-dashboard/Dockerfile
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/Dockerfile
@@ -14,7 +14,7 @@ EXPOSE 8718
 
 ADD ./target/ruoyi-sentinel-dashboard.jar ./app.jar
 
-ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} \
+ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom \
            #-Dskywalking.agent.service_name=ruoyi-sentinel-dashboard \
            #-javaagent:/ruoyi/skywalking/agent/skywalking-agent.jar \
            -jar app.jar ${JAVA_OPTS}
