add 新增 common-ratelimiter 限流模块 用于自定义业务限流 与 sentinel不冲突

--- a/ruoyi-common/ruoyi-common-bom/pom.xml
+++ b/ruoyi-common/ruoyi-common-bom/pom.xml
@@ -118,6 +118,13 @@
                 <version>${revision}</version>
             </dependency>
 
+            <!-- 限流 -->
+            <dependency>
+                <groupId>org.dromara</groupId>
+                <artifactId>ruoyi-common-ratelimiter</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.dromara</groupId>
                 <artifactId>ruoyi-common-idempotent</artifactId>
