(feature)其他组件增加nacos用户名和密码配置

--- a/ruoyi-auth/src/main/resources/application.yml
+++ b/ruoyi-auth/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
+      username: nacos
+      password: nacos
   config:
     import:
       - optional:nacos:application-common.yml
