--- a/ruoyi-example/ruoyi-stream-mq/src/main/resources/application.yml
+++ b/ruoyi-example/ruoyi-stream-mq/src/main/resources/application.yml
@@ -102,6 +102,8 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
+      username: nacos
+      password: nacos
   config:
     import:
       - optional:nacos:application-common.yml
