(feature)抽取nacos鉴权username到pom中去, 并添加dubbo注册增加username/passowrd

--- a/ruoyi-visual/ruoyi-powerjob-server/src/main/resources/application.properties
+++ b/ruoyi-visual/ruoyi-powerjob-server/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.cloud.nacos.discovery.group=@nacos.discovery.group@
 spring.cloud.nacos.discovery.namespace=${spring.profiles.active}
 spring.cloud.nacos.config.group=@nacos.config.group@
 spring.cloud.nacos.config.namespace=${spring.profiles.active}
-spring.cloud.nacos.username=nacos
-spring.cloud.nacos.password=nacos
+spring.cloud.nacos.username=@nacos.username@
+spring.cloud.nacos.password=@nacos.password@
 spring.config.import[0]=optional:nacos:datasource.yml
 spring.config.import[1]=optional:nacos:${spring.application.name}.properties
