--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,8 @@
                 <!-- 环境标识，需要与配置文件的名称相对应 -->
                 <profiles.active>dev</profiles.active>
                 <nacos.server>127.0.0.1:8848</nacos.server>
+                <nacos.username>nacos</nacos.username>
+                <nacos.password>nacos</nacos.password>
                 <nacos.discovery.group>DEFAULT_GROUP</nacos.discovery.group>
                 <nacos.config.group>DEFAULT_GROUP</nacos.config.group>
                 <logstash.address>127.0.0.1:4560</logstash.address>
@@ -85,6 +87,8 @@
             <properties>
                 <profiles.active>prod</profiles.active>
                 <nacos.server>127.0.0.1:8848</nacos.server>
+                <nacos.username>nacos</nacos.username>
+                <nacos.password>nacos</nacos.password>
                 <nacos.discovery.group>DEFAULT_GROUP</nacos.discovery.group>
                 <nacos.config.group>DEFAULT_GROUP</nacos.config.group>
                 <logstash.address>127.0.0.1:4560</logstash.address>
