--- a/ruoyi-common/ruoyi-common-dubbo/src/main/resources/common-dubbo.yml
+++ b/ruoyi-common/ruoyi-common-dubbo/src/main/resources/common-dubbo.yml
@@ -15,6 +15,8 @@ dubbo:
   registry:
     address: nacos://${spring.cloud.nacos.server-addr}
     group: DUBBO_GROUP
+    username: ${spring.cloud.nacos.username}
+    password: ${spring.cloud.nacos.password}
     parameters:
       namespace: ${spring.profiles.active}
   # 消费者相关配置
