--- a/ruoyi-visual/ruoyi-monitor/src/main/resources/application.yml
+++ b/ruoyi-visual/ruoyi-monitor/src/main/resources/application.yml
@@ -25,8 +25,8 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
-      username: nacos
-      password: nacos
+      username: @nacos.username@
+      password: @nacos.password@
   config:
     import:
       - optional:nacos:application-common.yml
