--- a/ruoyi-visual/ruoyi-seata-server/src/main/resources/application.yml
+++ b/ruoyi-visual/ruoyi-seata-server/src/main/resources/application.yml
@@ -32,8 +32,8 @@ seata:
       server-addr: @nacos.server@
       group: @nacos.discovery.group@
       namespace: ${spring.profiles.active}
-      username: nacos
-      password: nacos
+      username: @nacos.username@
+      password: @nacos.password@
       ##if use MSE Nacos with auth, mutex with username/password attribute
       #access-key: ""
       #secret-key: ""
@@ -47,8 +47,8 @@ seata:
       group: @nacos.discovery.group@
       namespace: ${spring.profiles.active}
       cluster: default
-      username: nacos
-      password: nacos
+      username: @nacos.username@
+      password: @nacos.password@
       ##if use MSE Nacos with auth, mutex with username/password attribute
       #access-key: ""
       #secret-key: ""
