回退 'Pull Request !135 : nacos升级到最新版本 并默认开启鉴权 框架内组件也默认附带鉴权信息'

--- a/ruoyi-visual/ruoyi-seata-server/src/main/resources/application.yml
+++ b/ruoyi-visual/ruoyi-seata-server/src/main/resources/application.yml
@@ -32,8 +32,8 @@ seata:
       server-addr: @nacos.server@
       group: @nacos.discovery.group@
       namespace: ${spring.profiles.active}
-      username: @nacos.username@
-      password: @nacos.password@
+      username:
+      password:
       ##if use MSE Nacos with auth, mutex with username/password attribute
       #access-key: ""
       #secret-key: ""
@@ -47,8 +47,8 @@ seata:
       group: @nacos.discovery.group@
       namespace: ${spring.profiles.active}
       cluster: default
-      username: @nacos.username@
-      password: @nacos.password@
+      username:
+      password:
       ##if use MSE Nacos with auth, mutex with username/password attribute
       #access-key: ""
       #secret-key: ""
