--- a/ruoyi-visual/ruoyi-nacos/src/main/resources/application.properties
+++ b/ruoyi-visual/ruoyi-nacos/src/main/resources/application.properties
@@ -19,7 +19,7 @@ server.port=8848
 ### Default web context path:
 server.servlet.contextPath=/nacos
 ### Include message field
-server.error.include-message=ALWAYS
+server.error.include-message=ON_PARAM
 ### Default web server port:
 
 #*************** Network Related Configurations ***************#
@@ -41,10 +41,7 @@ db.num=1
 ### Connect URL of DB:
 db.url.0=jdbc:mysql://127.0.0.1:3306/ry-config?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 db.user.0=root
-db.password.0=li123456
-
-### the maximum retry times for push
-nacos.config.push.maxRetryTime=50
+db.password.0=root
 
 #*************** Naming Module Related Configurations ***************#
 ### Data dispatch task execution period in milliseconds:
@@ -114,8 +111,7 @@ nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/
 nacos.core.auth.system.type=nacos
 
 ### If turn on auth system:
-### 开启nacos服务端鉴权行为, 需要nacos配置admin权限, client端需要配置nacos[username/password]
-nacos.core.auth.enabled=true
+nacos.core.auth.enabled=false
 
 ### Turn on/off caching of auth information. By turning on this switch, the update of auth information would have a 15 seconds delay.
 nacos.core.auth.caching.enabled=true
