--- a/ruoyi-api/ruoyi-api-bom/pom.xml
+++ b/ruoyi-api/ruoyi-api-bom/pom.xml
@@ -15,7 +15,7 @@
     </description>
 
     <properties>
-        <revision>2.1.2</revision>
+        <revision>2.2.0-SNAPSHOT</revision>
     </properties>
 
     <dependencyManagement>
