--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -41,6 +41,11 @@ dubbo:
     log-level: info
 
 spring:
+  threads:
+    # 开启虚拟线程 仅jdk21可用
+    # 开启后还需更改 UndertowConfig 虚拟线程配置
+    virtual:
+      enabled: false
   # 资源信息
   messages:
     # 国际化资源文件路径
