--- a/config/nacos/ruoyi-resource.yml
+++ b/config/nacos/ruoyi-resource.yml
@@ -54,28 +54,59 @@ mail:
   connectionTimeout: 0
 
 # sms 短信 支持 阿里云 腾讯云 云片 等等各式各样的短信服务商
-# https://wind.kim/doc/start 文档地址 各个厂商可同时使用
+# https://sms4j.com/doc3/ 差异配置文档地址 支持单厂商多配置，可以配置多个同时使用
 sms:
-  # 阿里云 dysmsapi.aliyuncs.com
-  alibaba:
-    #请求地址 默认为 dysmsapi.aliyuncs.com 如无特殊改变可以不用设置
-    requestUrl: dysmsapi.aliyuncs.com
-    #阿里云的accessKey
-    accessKeyId: xxxxxxx
-    #阿里云的accessKeySecret
-    accessKeySecret: xxxxxxx
-    #短信签名
-    signature: 测试
-  tencent:
-    #请求地址默认为 sms.tencentcloudapi.com 如无特殊改变可不用设置
-    requestUrl: sms.tencentcloudapi.com
-    #腾讯云的accessKey
-    accessKeyId: xxxxxxx
-    #腾讯云的accessKeySecret
-    accessKeySecret: xxxxxxx
-    #短信签名
-    signature: 测试
-    #短信sdkAppId
-    sdkAppId: appid
-    #地域信息默认为 ap-guangzhou 如无特殊改变可不用设置
-    territory: ap-guangzhou
+  # 配置源类型用于标定配置来源(interface,yaml)
+  config-type: yaml
+  # 用于标定yml中的配置是否开启短信拦截，接口配置不受此限制
+  restricted: true
+  # 短信拦截限制单手机号每分钟最大发送，只对开启了拦截的配置有效
+  minute-max: 1
+  # 短信拦截限制单手机号每日最大发送量，只对开启了拦截的配置有效
+  account-max: 30
+  # 以下配置来自于 org.dromara.sms4j.provider.config.BaseConfig类中
+  blends:
+    # 自定义的标识，也就是configId这里可以是任意值（最好不要是中文）
+    tx1:
+      # 框架定义的厂商名称标识，标定此配置是哪个厂商，详细请看厂商标识介绍部分
+      supplier: tencent
+      # 有些称为accessKey有些称之为apiKey，也有称为sdkKey或者appId。
+      access-key-id: 您的accessKey
+      # 称为accessSecret有些称之为apiSecret
+      access-key-secret: 您的accessKeySecret
+      # 您的短信签名
+      signature: 您的短信签名
+      #模板ID 如果不需要简化的sendMessage方法可以不配置，如果使用sendMessage的快速发送需此配置
+      template-id: xxxxxxxx
+      #您的sdkAppId
+      sdk-app-id: 您的sdkAppId
+      # 随机权重，负载均衡的权重值依赖于此，默认为1，如不需要负载均衡可不进行配置
+      weight: 1
+      #短信自动重试间隔时间  默认五秒
+      retry-interval: 3
+      # 短信重试次数，默认0次不重试，如果你需要短信重试则根据自己的需求修改值即可
+      max-retries: 1
+      # 当前厂商的发送数量上限，默认不设置上限
+      maximum: 10000
+    # 自定义的标识，也就是configId这里可以是任意值（最好不要是中文）
+    tx2:
+      #厂商标识，标定此配置是哪个厂商，详细请看厂商标识介绍部分
+      supplier: tencent
+      #您的accessKey
+      access-key-id: 您的accessKey
+      #您的accessKeySecret
+      access-key-secret: 您的accessKeySecret
+      #您的短信签名
+      signature: 您的短信签名
+      #模板ID 非必须配置，如果使用sendMessage的快速发送需此配置
+      template-id: xxxxxxxx
+      #您的sdkAppId
+      sdk-app-id: 您的sdkAppId
+      # 随机权重，负载均衡的权重值依赖于此，默认为1，如不需要负载均衡可不进行配置
+      weight: 1
+      #短信自动重试间隔时间  默认五秒
+      retry-interval: 3
+      # 短信重试次数，默认0次不重试，如果你需要短信重试则根据自己的需求修改值即可
+      max-retries: 1
+      # 当前厂商的发送数量上限，默认不设置上限
+      maximum: 10000
