fix 修复 nacos 不兼容 logback 1.4 新版本问题

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -42,6 +42,7 @@
         <module>ruoyi-common-tenant</module>
         <module>ruoyi-common-websocket</module>
         <module>ruoyi-common-social</module>
+        <module>ruoyi-common-nacos</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
