fix 修复 nacos 插件版本与客户端版本冲突问题

--- a/ruoyi-common/ruoyi-common-nacos/pom.xml
+++ b/ruoyi-common/ruoyi-common-nacos/pom.xml
@@ -31,6 +31,12 @@
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>logback-adapter</artifactId>
             <version>1.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba.nacos</groupId>
+                    <artifactId>nacos-common</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
