fix 修复 开启数据库加密 auth服务报错问题

--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -66,6 +66,12 @@
         <dependency>
             <groupId>org.dromara</groupId>
             <artifactId>ruoyi-common-encrypt</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.dromara</groupId>
+                    <artifactId>ruoyi-common-mybatis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
