--- a/ruoyi-common/ruoyi-common-job/pom.xml
+++ b/ruoyi-common/ruoyi-common-job/pom.xml
@@ -44,6 +44,23 @@
             <artifactId>powerjob-official-processors</artifactId>
         </dependency>
 
+        <!--  EasyRetry Client -->
+        <dependency>
+            <groupId>com.aizuda</groupId>
+            <artifactId>easy-retry-client-starter</artifactId>
+            <version>${easyretry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aizuda</groupId>
+            <artifactId>easy-retry-client-core</artifactId>
+            <version>${easyretry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aizuda</groupId>
+            <artifactId>easy-retry-client-job-core</artifactId>
+            <version>${easyretry.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
