--- a/config/nacos/ruoyi-job.yml
+++ b/config/nacos/ruoyi-job.yml
@@ -31,3 +31,13 @@ powerjob:
     # 调度中心应用名 通过服务名连接调度中心(启用 server-name 会导致 server-address 不生效)
     server-name: ruoyi-powerjob-server
     store-strategy: disk
+
+easy-retry:
+  enabled: true
+  # 需要在EasyRetry后台组管理创建对应名称的组,然后创建任务的时候选择对应的组,才能正确分派任务
+  group-name: "ruoyi_group"
+  server:
+    host: 127.0.0.1
+    port: 1788
+  # 详见 script/sql/easy_retry.sql `namespace` 表
+  namespace: ${spring.profiles.active}
