--- a/ruoyi-visual/pom.xml
+++ b/ruoyi-visual/pom.xml
@@ -14,6 +14,7 @@
         <module>ruoyi-seata-server</module>
         <module>ruoyi-nacos</module>
         <module>ruoyi-powerjob-server</module>
+        <module>ruoyi-easyretry-server</module>
     </modules>
 
     <artifactId>ruoyi-visual</artifactId>
