fix 修复 easyretry 无法监控问题

--- a/ruoyi-visual/ruoyi-easyretry-server/src/main/resources/application.yml
+++ b/ruoyi-visual/ruoyi-easyretry-server/src/main/resources/application.yml
@@ -28,6 +28,9 @@ logging:
   config: classpath:logback-plus.xml
 
 management:
+  # 解决 er 服务有 context-path 无法监控问题
+  server:
+    port: 8801
   endpoints:
     web:
       exposure:
