update 优化 去除gc日志参数(有需要自己加)

--- a/ruoyi-modules/ruoyi-resource/Dockerfile
+++ b/ruoyi-modules/ruoyi-resource/Dockerfile
@@ -18,6 +18,6 @@ ADD ./target/ruoyi-resource.jar ./app.jar
 ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} \
            #-Dskywalking.agent.service_name=ruoyi-resource \
            #-javaagent:/ruoyi/skywalking/agent/skywalking-agent.jar \
-           -jar app.jar \
-           -XX:+HeapDumpOnOutOfMemoryError -Xlog:gc*,:time,tags,level -XX:+UseZGC ${JAVA_OPTS}
+           -XX:+HeapDumpOnOutOfMemoryError -XX:+UseZGC ${JAVA_OPTS} \
+           -jar app.jar
 
