--- a/ruoyi-modules/ruoyi-gen/Dockerfile
+++ b/ruoyi-modules/ruoyi-gen/Dockerfile
@@ -13,4 +13,4 @@ EXPOSE ${SERVER_PORT}
 
 ADD ./target/ruoyi-gen.jar ./app.jar
 
-ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} -jar app.jar ${JAVA_OPTS}
+ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -Dserver.port=${SERVER_PORT} ${JAVA_OPTS} -jar app.jar
