--- a/ruoyi-visual/ruoyi-powerjob-server/src/main/resources/application.properties
+++ b/ruoyi-visual/ruoyi-powerjob-server/src/main/resources/application.properties
@@ -33,6 +33,8 @@ management.health.mongo.enabled=${oms.mongodb.enable}
 
 # nacos 配置
 spring.cloud.nacos.server-addr=@nacos.server@
+spring.cloud.nacos.username=@nacos.username@
+spring.cloud.nacos.password=@nacos.password@
 spring.cloud.nacos.discovery.group=@nacos.discovery.group@
 spring.cloud.nacos.discovery.namespace=${spring.profiles.active}
 spring.cloud.nacos.config.group=@nacos.config.group@
