--- a/ruoyi-gateway/src/main/resources/application.yml
+++ b/ruoyi-gateway/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     nacos:
       # nacos 服务地址
       server-addr: @nacos.server@
+      username: @nacos.username@
+      password: @nacos.password@
       discovery:
         # 注册组
         group: @nacos.discovery.group@
