--- a/ruoyi-visual/ruoyi-nacos/src/main/resources/application.properties
+++ b/ruoyi-visual/ruoyi-nacos/src/main/resources/application.properties
@@ -15,12 +15,13 @@
 #
 
 #*************** Spring Boot Related Configurations ***************#
-server.port=8848
+
 ### Default web context path:
 server.servlet.contextPath=/nacos
 ### Include message field
-server.error.include-message=ON_PARAM
+server.error.include-message=ALWAYS
 ### Default web server port:
+server.port=8848
 
 #*************** Network Related Configurations ***************#
 ### If prefer hostname over ip for Nacos server addresses in cluster.conf:
@@ -32,9 +33,9 @@ server.error.include-message=ON_PARAM
 spring.application.name=ruoyi-nacos
 #*************** Config Module Related Configurations ***************#
 ### Deprecated configuration property, it is recommended to use `spring.sql.init.platform` replaced.
-spring.sql.init.platform=mysql
+# spring.datasource.platform=mysql
 nacos.plugin.datasource.log.enabled=true
-
+spring.sql.init.platform=mysql
 ### Count of DB:
 db.num=1
 
@@ -43,15 +44,18 @@ db.url.0=jdbc:mysql://127.0.0.1:3306/ry-config?characterEncoding=utf8&connectTim
 db.user.0=root
 db.password.0=root
 
+### the maximum retry times for push
+nacos.config.push.maxRetryTime=50
+
 #*************** Naming Module Related Configurations ***************#
 ### Data dispatch task execution period in milliseconds:
-# nacos.naming.distro.taskDispatchPeriod=200
 
-### Data count of batch sync task:
-# nacos.naming.distro.batchSyncKeyCount=1000
 
-### Retry delay in milliseconds if sync task failed:
-# nacos.naming.distro.syncRetryDelay=5000
+
+
+
+
+
 
 ### If enable data warmup. If set to false, the server would accept request without local data preparation:
 # nacos.naming.data.warmup=true
@@ -100,6 +104,18 @@ management.metrics.export.influx.enabled=false
 #management.metrics.export.influx.consistency=one
 #management.metrics.export.influx.compressed=true
 
+#*************** Access Log Related Configurations ***************#
+### If turn on the access log:
+server.tomcat.accesslog.enabled=true
+
+### accesslog automatic cleaning time
+server.tomcat.accesslog.max-days=30
+
+### The access log pattern:
+server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %{User-Agent}i %{Request-Source}i
+
+### The directory of access log:
+server.tomcat.basedir=file:.
 #*************** Access Control Related Configurations ***************#
 ### If enable spring security, this option is deprecated in 1.2.0:
 #spring.security.enabled=false
@@ -111,7 +127,7 @@ nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/
 nacos.core.auth.system.type=nacos
 
 ### If turn on auth system:
-nacos.core.auth.enabled=false
+nacos.core.auth.enabled=true
 
 ### Turn on/off caching of auth information. By turning on this switch, the update of auth information would have a 15 seconds delay.
 nacos.core.auth.caching.enabled=true
@@ -142,8 +158,32 @@ nacos.core.auth.plugin.nacos.token.secret.key=SecretKey0123456789012345678901234
 #nacos.core.auth.ldap.userdn=cn={0},dc=example,dc=org
 #nacos.core.auth.ldap.filter.prefix=uid
 #nacos.core.auth.ldap.case.sensitive=true
+#nacos.core.auth.ldap.ignore.partial.result.exception=false
 
+#*************** Control Plugin Related Configurations ***************#
+# plugin type
+#nacos.plugin.control.manager.type=nacos
 
+# local control rule storage dir, default ${nacos.home}/data/connection and ${nacos.home}/data/tps
+#nacos.plugin.control.rule.local.basedir=${nacos.home}
+
+# external control rule storage type, if exist
+#nacos.plugin.control.rule.external.storage=
+
+#*************** Config Change Plugin Related Configurations ***************#
+# webhook
+#nacos.core.config.plugin.webhook.enabled=false
+# It is recommended to use EB https://help.aliyun.com/document_detail/413974.html
+#nacos.core.config.plugin.webhook.url=http://localhost:8080/webhook/send?token=***
+# The content push max capacity ,byte
+#nacos.core.config.plugin.webhook.contentMaxCapacity=102400
+
+# whitelist
+#nacos.core.config.plugin.whitelist.enabled=false
+# The import file suffixs
+#nacos.core.config.plugin.whitelist.suffixs=xml,text,properties,yaml,html
+# fileformatcheck,which validate the import file of type and content
+#nacos.core.config.plugin.fileformatcheck.enabled=false
 #*************** Istio Related Configurations ***************#
 ### If turn on the MCP server:
 nacos.istio.mcp.server.enabled=false
