--- a/config/nacos/ruoyi-job.yml
+++ b/config/nacos/ruoyi-job.yml
@@ -13,17 +13,17 @@ spring:
           username: ${datasource.job.username}
           password: ${datasource.job.password}
 
-easy-retry:
+snail-job:
   enabled: true
-  # 需要在EasyRetry后台组管理创建对应名称的组,然后创建任务的时候选择对应的组,才能正确分派任务
+  # 需要在 SnailJob 后台组管理创建对应名称的组,然后创建任务的时候选择对应的组,才能正确分派任务
   group-name: "ruoyi_group"
-  # EasyRetry接入验证令牌
-  token: "ER_cKqBTPzCsWA3VyuCfFoccmuIEGXjr5KT"
+  #  SnailJob 接入验证令牌
+  token: "SJ_cKqBTPzCsWA3VyuCfFoccmuIEGXjr5KT"
   server:
     # 从 nacos 获取服务
-    server-name: ruoyi-easyretry-server
+    server-name: ruoyi-snailjob-server
     # 服务名优先 ip垫底
     host: 127.0.0.1
     port: 1788
-  # 详见 script/sql/easy_retry.sql `er_namespace` 表
+  # 详见 script/sql/ry_job.sql `sj_namespace` 表
   namespace: ${spring.profiles.active}
