--- a/config/nacos/ruoyi-snailjob-server.yml
+++ b/config/nacos/ruoyi-snailjob-server.yml
@@ -14,8 +14,8 @@ spring:
       max-lifetime: 900000
       keepaliveTime: 30000
 
-# easy-retry 服务端配置
-easy-retry:
+# snail-job 服务端配置
+snail-job:
   # 拉取重试数据的每批次的大小
   retry-pull-page-size: 1000
   # 拉取重试数据的每批次的大小
@@ -36,5 +36,4 @@ easy-retry:
     max-count: 288
     #间隔时间
     trigger-interval: 900
-  mode: all
   retry-max-pull-count: 10
