--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <redisson.version>3.29.0</redisson.version>
         <lock4j.version>2.2.7</lock4j.version>
         <powerjob.version>4.3.6</powerjob.version>
-        <easyretry.version>3.2.0</easyretry.version>
+        <snailjob.version>1.0.0-beta1</snailjob.version>
         <satoken.version>1.38.0</satoken.version>
         <lombok.version>1.18.32</lombok.version>
         <logstash.version>7.4</logstash.version>
@@ -264,33 +264,16 @@
                 <version>${lock4j.version}</version>
             </dependency>
 
-            <!-- PowerJob -->
-            <dependency>
-                <groupId>tech.powerjob</groupId>
-                <artifactId>powerjob-worker</artifactId>
-                <version>${powerjob.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>tech.powerjob</groupId>
-                <artifactId>powerjob-official-processors</artifactId>
-                <version>${powerjob.version}</version>
-            </dependency>
-
-            <!--  EasyRetry Client -->
+            <!--  SnailJob Client -->
             <dependency>
                 <groupId>com.aizuda</groupId>
-                <artifactId>easy-retry-client-starter</artifactId>
-                <version>${easyretry.version}</version>
+                <artifactId>snail-job-client-starter</artifactId>
+                <version>${snailjob.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.aizuda</groupId>
-                <artifactId>easy-retry-client-core</artifactId>
-                <version>${easyretry.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.aizuda</groupId>
-                <artifactId>easy-retry-client-job-core</artifactId>
-                <version>${easyretry.version}</version>
+                <artifactId>snail-job-client-job-core</artifactId>
+                <version>${snailjob.version}</version>
             </dependency>
 
             <!-- 加密包引入 -->
