--- a/ruoyi-visual/pom.xml
+++ b/ruoyi-visual/pom.xml
@@ -13,7 +13,7 @@
         <module>ruoyi-sentinel-dashboard</module>
         <module>ruoyi-seata-server</module>
         <module>ruoyi-nacos</module>
-        <module>ruoyi-easyretry-server</module>
+        <module>ruoyi-snailjob-server</module>
     </modules>
 
     <artifactId>ruoyi-visual</artifactId>
