--- a/ruoyi-api/ruoyi-api-workflow/pom.xml
+++ b/ruoyi-api/ruoyi-api-workflow/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ruoyi-api-workflow</artifactId>
 
     <description>
-        ruoyi-api-resource 资源服务接口模块
+        ruoyi-api-workflow 工作流接口模块
     </description>
 
     <dependencies>
@@ -21,11 +21,6 @@
         <dependency>
             <groupId>org.dromara</groupId>
             <artifactId>ruoyi-common-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.dromara</groupId>
-            <artifactId>ruoyi-common-translation</artifactId>
         </dependency>
 
     </dependencies>
