--- a/ruoyi-modules/ruoyi-workflow/pom.xml
+++ b/ruoyi-modules/ruoyi-workflow/pom.xml
@@ -61,6 +61,7 @@
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-all</artifactId>
+            <version>1.10</version>
             <exclusions>
                 <exclusion>
                     <groupId>xalan</groupId>
