--- a/config/nacos/seata-server.properties
+++ b/config/nacos/seata-server.properties
@@ -1,6 +1,7 @@
 service.vgroupMapping.ruoyi-auth-group=default
 service.vgroupMapping.ruoyi-system-group=default
 service.vgroupMapping.ruoyi-resource-group=default
+service.vgroupMapping.ruoyi-workflow-group=default
 
 service.enableDegrade=false
 service.disableGlobalTransaction=false
