!163 将spring-cloud-stream改为普通的mq依赖用法 * update: sky日志 * update: RocketMQ的集成方式 * feat:1. rabbit: 普通消息、延迟队列

--- a/ruoyi-example/pom.xml
+++ b/ruoyi-example/pom.xml
@@ -10,7 +10,7 @@
 
     <modules>
         <module>ruoyi-demo</module>
-        <module>ruoyi-stream-mq</module>
+        <module>ruoyi-test-mq</module>
     </modules>
 
     <artifactId>ruoyi-example</artifactId>
