--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
         <mapstruct-plus.version>1.3.6</mapstruct-plus.version>
         <mapstruct-plus.lombok.version>0.2.0</mapstruct-plus.lombok.version>
         <justauth.version>1.16.6</justauth.version>
-        <rocketmq-version>2.3.0</rocketmq-version>
         <!-- 离线IP地址定位库 -->
         <ip2region.version>2.7.0</ip2region.version>
         <!-- 临时修复 fastjson 漏洞 -->
@@ -58,8 +57,10 @@
 
         <!-- SMS 配置 -->
         <sms4j.version>3.2.1</sms4j.version>
-        <!--工作流配置-->
+        <!-- 工作流配置 -->
         <flowable.version>7.0.0</flowable.version>
+        <!-- mq配置 -->
+        <rocketmq.version>2.3.0</rocketmq.version>
 
         <!-- 插件版本 -->
         <maven-compiler-plugin.verison>3.11.0</maven-compiler-plugin.verison>
@@ -389,7 +390,7 @@
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
-                <version>${rocketmq-version}</version>
+                <version>${rocketmq.version}</version>
             </dependency>
 
         </dependencies>
