--- a/ruoyi-example/ruoyi-test-mq/pom.xml
+++ b/ruoyi-example/ruoyi-test-mq/pom.xml
@@ -33,7 +33,10 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.dromara</groupId>
